tests/negative/neg_pr113_unknown_discriminant_name.safe
package neg_PR113_Unknown_Discriminant_Name
   type packet (Kind : character = 'A', Count : integer = 0) is
      record
         value : integer;

   p : packet (Mode = 'A', Count = 1) = (value = 1);

